--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Node.js backend deployed on Render",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
@@ -10,6 +11,6 @@
     "express": "^4.18.2"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   }
 }
